# FastAgent

./: .gitattributes  .gitignore  pyproject.toml  test.py  test_team.py
src/agent/: agent.py  example_tool.py  team.py
src/llm_proxy/: __init__.py  function_call.py  llm_base.py  openai_llm.py  tool.py
src/tools/: retry.py
