[project]
name = "fastagent"
version = "1.0.1"
description = "一个用于构建和管理 AI 代理团队的框架"
authors = [
    {name = "zhenpengyue", email = "imyueh@foxmail.com"},
]
dependencies = [
    "requests",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "json-repair"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastagent"] 